# projecttemplates

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  pt
.cache/clangd/index/: archive.hpp.F6AF1015A5FCD676.idx  archives.cpp.BA975007FC989C76.idx  arguments.cpp.31DD86D4990208C3.idx  arguments.cpp.F9525A8BFE04AC2A.idx  arguments.hpp.8FF09DAE6DDF8047.idx  arguments.hpp.BB50D2101A0D4BFC.idx  files.cpp.836D6C672E60A5F3.idx  files.hpp.542A99718338CF61.idx  main.cpp.77974FC337F08DAF.idx  main.cpp.86155A4FA00763AD.idx  main.cpp.883859E22F19421F.idx  main.hpp.7F8A1A36F4C11502.idx  main.hpp.D3E1FC37BE8CBCCC.idx  other.cpp.23ECC8DD4D43206B.idx  other.hpp.832155A1D9690C57.idx  test.cpp.3B0B0CF459BD73A1.idx  test.hpp.2C8CAD66F7AA2018.idx  verbose.cpp.A053ECAC748264BB.idx  verbose.hpp.0C07EE8BB5EE7DA4.idx
include/: arguments.hpp  files.hpp  main.hpp  verbose.hpp
src/: arguments.cpp  files.cpp  main.cpp  verbose.cpp
